--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 body{
     background-color: beige;
 }
@@ -7,12 +6,12 @@ body{
    text-align:justify;
     top:170px;
     color:green;
-   
+    
     position:absolute;
     }
  table, td {
-    border: 1px solid black;
-    width:80em;
+    border: 1px solid green;
+    width:79em;
     height:3px;
 }
 #body{
@@ -26,4 +25,11 @@ h1{
 p{
     display:none;
 }
-    
+#box{
+    display:none;
+}
+#open_box{
+    position:absolute;
+    right:10px;
+    margin-top:60px;
+}
